--- a/TodoListApp/Base.lproj/Main.storyboard
+++ b/TodoListApp/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6154.17" systemVersion="13D65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="lew-DZ-KXg">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6154.17" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="lew-DZ-KXg">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6153.11"/>
     </dependencies>
@@ -28,9 +28,10 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="List" id="JXx-5k-B46">
+                        <barButtonItem key="leftBarButtonItem" systemItem="edit" id="vue-3w-4nr"/>
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="OPY-AE-tCz">
                             <connections>
-                                <segue destination="vLz-Qu-Afi" kind="show" id="hn6-8o-8Ju"/>
+                                <segue destination="vLz-Qu-Afi" kind="show" id="YmT-Ed-h7r"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -94,12 +95,12 @@
                         </variation>
                     </view>
                     <navigationItem key="navigationItem" title="Add Item" id="s6B-4w-QTk">
-                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="r0J-OF-Sn3">
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="r0J-OF-Sn3">
                             <connections>
                                 <segue destination="2iH-ld-loW" kind="unwind" unwindAction="unwindToList:" id="uSu-xB-diV"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" title="Done" id="ckV-om-WgZ">
+                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="ckV-om-WgZ">
                             <connections>
                                 <segue destination="2iH-ld-loW" kind="unwind" unwindAction="unwindToList:" id="3zc-ky-JYn"/>
                             </connections>
